# Data-Structures-and-Algorithms

./: main
DataStructures/: CMakeLists.txt  main.cpp
DataStructures/BinaryTree/PreorderTraversal/: preorderTraversal.cpp
DataStructures/DynamicArray/: DynamicArray.cpp  DynamicArray.h  DynamicArrayIterator.cpp  DynamicArrayIterator.h
DataStructures/Heap/: BinaryHeap.cpp  BinaryHeap.h
DataStructures/LinkedList/DLL/: DLL.cpp  DLL.h  DLL_Iterator.cpp  DLL_Iterator.h
DataStructures/LinkedList/SLL/: SLL.cpp  SLL.h  SLL_Iterator.cpp  SLL_Iterator.h
DataStructures/LinkedListOnArrays/DLLA/: DLLA.cpp  DLLA.h  DLLAIterator.cpp  DLLAIterator.h
DataStructures/LinkedListOnArrays/SLLA/: SLLA.cpp  SLLA.h  SLLAIterator.cpp  SLLAIterator.h
Laborator/CCS_transpose/: CCS.cpp  CMakeLists.txt  main.cpp
Laborator/DynamicArray/: CMakeLists.txt  Dynamic_Array.cpp  Dynamic_Array.h  Example.cpp  Example.h  main.cpp
Laborator/L1/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  HelperArray.cpp  HelperArray.h  Matrix.cpp  Matrix.h  README.md  ShortTest.cpp  samacac
Laborator/L1_2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Matrix.cpp  Matrix.h  ShortTest.cpp
Laborator/L2/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  Queue.cpp  Queue.h  ShortTest.cpp  Stack.cpp  Stack.h
Laborator/L2/Main/: App.cpp
Laborator/L2/Queue/src/: Queue.cpp  Queue.h
Laborator/L2/Queue/test/: ExtendedTestQueue.cpp  ShortTestQueue.cpp
Laborator/L2/Shunting_Yard/: shunting_yard.cpp
Laborator/L2/Shunting_Yard/src/: shunting_yard.cpp
Laborator/L2/Shunting_Yard/test/: shunting_yard_test.h
Laborator/L2/Stack/src/: Stack.cpp  Stack.h
Laborator/L2/Stack/test/: ExtendedStackTest.cpp  ExtendedStackTest.h  ShortStackTest.cpp  ShortStackTest.h
Laborator/L2_queue_and_stack/: CMakeLists.txt
Laborator/L2_queue_and_stack/Main/: App.cpp
Laborator/L2_queue_and_stack/Queue/src/: Queue.cpp
Laborator/L2_queue_and_stack/Queue/test/: ExtendedQueueTest.h  ShortQueueTest.h
Laborator/L2_queue_and_stack/Shunting_Yard/src/: shunting_yard.h
Laborator/L2_queue_and_stack/Shunting_Yard/test/: shunting_yard_test.cpp
Laborator/L2_queue_and_stack/Shunting_Yard_With_Both/src/: shunting_yard_with_both.cpp  shunting_yard_with_both.h
Laborator/L2_queue_and_stack/Shunting_Yard_With_Both/test/: shunting_yard_with_both_test.cpp  shunting_yard_with_both_test.h
Laborator/L2_queue_and_stack/Stack/src/: Stack.cpp  Stack.h
Laborator/L2_queue_and_stack/Stack/test/: ExtendedStackTest.cpp  ShortStackTest.cpp
S1/: bagg.py  iteratorr.py  main.py
(+95 files in other folders)
